# smartprint

./: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: Upload_Python_Package.yml  codecov.yml  publish-pypi  python-app.yml  python-publish.yml
src/smartprint/: __init__.py
tests/: test_basic_cases.py  test_inline_prints.py
