
[tool.poetry]
name = "smartprint"
version = "0.1.3"
description = "A smart (and lazy) way to print"

license = "MIT"

authors = [
    "Nishant Kumar <abc.nishant007@gmail.com>"
]

readme = "README.md"

repository = "https://github.com/abcnishant007/smartprint"
homepage = "https://pypi.org/project/smartprint/"

keywords = ["packaging"]

[tool.poetry.dependencies]
python = "^3.8"  # Compatible python versions must be declared here
aiohttp = "^3.8.1"
# Dependencies with extras
# requests = { version = "^2.28", extras = [ "security" ] }
# Python specific dependencies with prereleases allowed
# tomli = { version = "^2.0.1", python = "<3.11", allow-prereleases = true }
# Git dependencies
# cleo = { git = "https://github.com/python-poetry/cleo.git", branch = "master" }

# Optional dependencies (extras)
pendulum = { version = "^2.1.2", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"

[tool.poetry.scripts]
my-script = "my_package:main"
