[project]
name = "smartprint"
description = "A smart (or lazy) way to print" 
version = "0.1.3"
authors = [
    { name = "Nishant Kumar", email = "abc.nishant007@gmail.com" }
]
dependencies = [
]

[project.optional-dependencies]
dev = [
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
